# tensorboard

tensorboard/: plugin_util.py  plugin_util_test.py
tensorboard/data/server/: BUILD  Cargo.toml  main.rs
tensorboard/data/server/cargo/: BUILD.bazel
tensorboard/data/server/gcs/: auth.rs  gsutil.rs
tensorboard/plugins/custom_scalar/: custom_scalars_plugin.py
tensorboard/plugins/hparams/: hparams_plugin.py
