# Copyright 2020 The TensorFlow Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

[package]
name = "rustboard"
version = "0.7.0-alpha.0"
authors = ["The TensorFlow Authors <tensorboard-gardener@google.com>"]
# Keep in sync with `edition` in rustfmt.toml.
edition = "2018"
default-run = "rustboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
async-trait = "0.1.59"
base64 = "0.20.0"
byteorder = "1.4.3"
bytes = "1.3.0"
clap = "4.0.29"
crc = "3.0.0"
crossbeam = "0.8.2"
env_logger = "0.10.0"
futures-core = "0.3.25"
gcp_auth = "0.7.4"
log = "0.4.17"
prost = "0.11.3"
prost-types = "0.11.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.6.1"
reqwest = { version = "0.11.13", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = "0.8.3"
tonic-reflection = "0.6.0"
walkdir = "2.3.2"

[dev-dependencies]
prost-build = "0.11.4"
tempfile = "3.3.0"
tonic-build = "0.8.4"

[[bin]]
name = "rustboard"
path = "main.rs"

[[bin]]
name = "bench"
path = "bench.rs"

[[bin]]
name = "gsutil"
path = "gcs/gsutil.rs"

[lib]
name = "rustboard_core"
path = "lib.rs"

[package.metadata.raze]
default_gen_buildrs = false
package_aliases_dir = "./cargo"
rust_rules_workspace_name = "rules_rust"
workspace_path = "//third_party/rust"
genmode = "Remote"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.libc.'0.2.139']
gen_buildrs = true

[package.metadata.raze.crates.log.'0.4.17']
gen_buildrs = true

[package.metadata.raze.crates.indexmap.'1.9.2']
additional_flags = [
    "--cfg=has_std",
]

[package.metadata.raze.crates.proc-macro2.'1.0.49']
additional_flags = [
    "--cfg=use_proc_macro",
    "--cfg=wrap_proc_macro",
]

[package.metadata.raze.crates.prost-build.'0.11.5']
gen_buildrs = true

[package.metadata.raze.crates.ring.'0.16.20']
gen_buildrs = true
data_attr = "glob([\"src/**/*.der\"])"

[package.metadata.raze.crates.tonic-reflection.'0.6.0']
gen_buildrs = true
build_data_dependencies = ["@com_google_protobuf//:protoc"]

[package.metadata.raze.crates.webpki.'0.22.0']
gen_buildrs = true
data_attr = "glob([\"src/**/*.der\"])"
